--- a/templates/loan_management.html
+++ b/templates/loan_management.html
@@ -1292,7 +1292,7 @@
 {% if approove %}
 <!-- ตารางอนุมัติยอด -->
 <div class="approove-table-section" style="display:none;">
-  <h3>ตารางลูกค้าที่รออนุมัติ</h3>
+  <h3>ตารางลูกค้าที่อนุมัติ</h3>
   <table class="approove-table">
     <thead>
       <tr>
